cleanup + petite modif actor

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,12 +13,23 @@ body {
     line-height: 175%;
 }
 
-.jumbotron p{
-    font-size: 14px;
-    padding: 20px;
+.jumbotron p {
+    font-size: 16px;
 }
 
-.modal-content{
+.thumbnail {
+    float:left;
+    margin-right: 20px;
+    width: 150px;
+    height: 200px;
+}
+
+.panel {
+    overflow: hidden;
+    margin-bottom: 50px;
+}
+
+.modal-content {
     border-radius: 0px;
     background-color: black;
     box-shadow:0 10px 10px #080808;
@@ -28,18 +39,14 @@ body {
     color: #f6f7fb;
 }
 
-.appleButton a{
-    float: right;
-    overflow:hidden;
+.appleButton {
     background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_itunes-lrg.svg) no-repeat;
+    float: right;
     width:110px;
     height:40px;
 }
 
-
 .main-container {
     padding-top: 100px;
     padding-left: 5%;
-    padding-right: 5%;
 }
-
