--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -1,21 +1,17 @@
 <div ng-include="'views/navbar.html'"></div>
 
-<div class="background-image"></div>
 <div class="container-fluid main-container">
-    <div class="row topPage">
-    </div>
-    <div class="row">
-        <div class="col-md-8 col-sm-8 col-xs-12">
-            <div class="row">
-                <div class="col-md-6 col-sm-12 col-xs-12">
-                    <h1 class="row">Joaquin Phoenix</h1>
 
-                    <p class="row">Drama</p>
-                </div>
-                <div class="col-md-5 col-sm-5 col-xs-12">
-                </div>
-            </div>
-            <div class="row jumbotron">
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+            <h1>Joaquin Phoenix</h1>
+            <h4>Drama</h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-7 col-sm-7 col-xs-12">
+            <div class="jumbotron">
                 <p>
                     Joaquin Phoenix was born in San Juan, Puerto Rico, to Arlyn (Dunetz) and John Bottom, and is the
                     middle child in a brood of five. His parents, from the continental United States, were then serving
@@ -24,197 +20,75 @@
                     British Isles descent. ...
                 </p>
             </div>
-            <div class="col-md-12">
-                <h3 class="row">Movies</h3>
-                <div class="row">
-                    <div class="row">
-                        <img class="thumbnail col-md-3 col-sm-3 col-xs-3"
-                             src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-
-                        <div class="col-md-9 col-sm-9 col-xs-9">
-                            <div class="jumbotron">
-                                <h4 class="row">Her</h4>
-                                <h5 class="row">Release date : 10 january 2014</h5>
-
-                                <p class="row">A lonely writer develops an unlikely relationship with his newly purchased
-                                    operating
-                                    system that's designed to meet his every need. </p>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6">
-                                    <button type="button" class="btn btn-info" data-toggle="modal"
-                                            data-target="#movieVideoOne">
-                                        Bande annonce
-                                    </button>
-                                    <div id="movieVideoOne" class="modal fade" role="dialog">
-                                        <div class="modal-dialog">
-
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="close"
-                                                            data-dismiss="modal">&times;</button>
-                                                    <h4 class="modal-title">Her - Bande Annonce</h4>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <iframe width="100%" height="315"
-                                                            src="https://www.youtube.com/embed/hTzCSDOM0JQ" frameborder="0"
-                                                            allowfullscreen></iframe>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="appleButton col-md-6 col-sm-6">
-                                    <a href="https://geo.itunes.apple.com/us/movie/her-2013/id810314926?mt=6"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <img class="thumbnail col-md-3 col-sm-3 col-xs-3"
-                             src="http://ia.media-imdb.com/images/M/MV5BMTgxMjY1OTk4MV5BMl5BanBnXkFtZTcwOTQ3NDMxOQ@@._V1_SY317_CR6,0,214,317_AL_.jpg"/>
-
-                        <div class="col-md-9 col-sm-9 col-xs-9">
-                            <div class="jumbotron">
-                                <h4 class="row">The Master</h4>
-                                <h5 class="row">Release date : 21 september 2012</h5>
-
-                                <p class="row">A Naval veteran arrives home from war unsettled and uncertain of his future -
-                                    until he is
-                                    tantalized by The Cause and its charismatic leader. </p>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6">
-                                    <button type="button" class="btn btn-info" data-toggle="modal"
-                                            data-target="#movieVideoTwo">
-                                        Bande annonce
-                                    </button>
-                                    <div id="movieVideoTwo" class="modal fade" role="dialog">
-                                        <div class="modal-dialog">
-
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="close"
-                                                            data-dismiss="modal">&times;</button>
-                                                    <h4 class="modal-title">The Master - Bande Annonce</h4>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <iframe width="100%" height="315"
-                                                            src="https://www.youtube.com/embed/fJ1O1vb9AUU" frameborder="0"
-                                                            allowfullscreen></iframe>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="appleButton col-md-6 col-sm-6">
-                                    <a href="https://geo.itunes.apple.com/us/movie/the-master/id582477423?mt=6"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-12">
-                <h3 class="row">Series</h3>
-                <div class="row">
-                    <div class="row">
-                        <img class="thumbnail col-md-3 col-sm-3 col-xs-3"
-                             src="http://ia.media-imdb.com/images/M/MV5BMTkwMjg2NzczNV5BMl5BanBnXkFtZTcwNzg5ODcyMQ@@._V1_SY317_CR4,0,214,317_AL_.jpg"/>
-
-                        <div class="col-md-9 col-sm-9 col-xs-9">
-                            <div class="jumbotron">
-                                <h4 class="row">Murder, She Wrote</h4>
-
-                                <p class="row">Professional writer and amateur sleuth Jessica Fletcher uses her intellect,
-                                    charm, and
-                                    persistence to get to the bottom of every crime she encounters. </p>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6">
-                                    <button type="button" class="btn btn-info" data-toggle="modal"
-                                            data-target="#serieVideoOne">
-                                        Bande annonce
-                                    </button>
-                                    <div id="serieVideoOne" class="modal fade" role="dialog">
-                                        <div class="modal-dialog">
-
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="close"
-                                                            data-dismiss="modal">&times;</button>
-                                                    <h4 class="modal-title">Murder, she wrote - Bande Annonce</h4>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <iframe width="100%" height="315"
-                                                            src="https://www.youtube.com/embed/g7s8NWAqVS8" frameborder="0"
-                                                            allowfullscreen></iframe>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="appleButton col-md-6 col-sm-6">
-                                    <a href="https://geo.itunes.apple.com/us/tv-season/murder-she-wrote/id988556468?i=1024047736&mt=4"></a>
-                                </div>
-                            </div>
-                        </div>
-
-
-                    </div>
-                    <div class="row">
-                        <img class="thumbnail col-md-3 col-sm-3 col-xs-3"
-                             src="http://ia.media-imdb.com/images/M/MV5BMTYyODQwMzY3MF5BMl5BanBnXkFtZTYwNTQxNDI2._V1_SX214_AL_.jpg"/>
-
-                        <div class="col-md-9 col-sm-9 col-xs-9">
-                            <div class="jumbotron">
-                                <h4 class="row">The Fall Guy</h4>
-
-                                <p class="row">The adventures of a film stunt performer who moonlights as a bounty hunter
-                                    when movie
-                                    work is slow.</p>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6">
-                                    <button type="button" class="btn btn-info" data-toggle="modal"
-                                            data-target="#serieVideoTwo">
-                                        Bande annonce
-                                    </button>
-                                    <div id="serieVideoTwo" class="modal fade" role="dialog">
-                                        <div class="modal-dialog">
-
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="close"
-                                                            data-dismiss="modal">&times;</button>
-                                                    <h4 class="modal-title">The Fall Guy - Bande Annonce</h4>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <iframe width="560" height="315"
-                                                            src="https://www.youtube.com/embed/dj9ev40C30M" frameborder="0"
-                                                            allowfullscreen></iframe>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="appleButton col-md-6 col-sm-6">
-                                    <a href="https://geo.itunes.apple.com/us/tv-season/the-fall-guy-season-1/id268619085?mt=4"></a>
-                                </div>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
         </div>
-        <div class="thumbnail col-md-4 col-sm-4 col-xs-12">
-            <img class="actor-photo"
-                 src="http://ia.media-imdb.com/images/M/MV5BNzAzNjg5MDE3N15BMl5BanBnXkFtZTcwMjIxNzU0OA@@._V1_UX214_CR0,0,214,317_AL_.jpg">
+
+        <div class="col-md-4 col-md-offset-1 col-sm-4 col-sm-offset-1 col-xs-12">
+            <img src="http://ia.media-imdb.com/images/M/MV5BNzAzNjg5MDE3N15BMl5BanBnXkFtZTcwMjIxNzU0OA@@._V1_UX214_CR0,0,214,317_AL_.jpg">
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+            <h2>Movies</h2>
+        </div>
+    </div>
+    <div class="row" ng-repeat="i in [1, 2, 3]">
+        <div class="col-md-7 col-sm-12 col-xs-12">
+            <img class="thumbnail" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
+
+            <div class="panel panel-info">
+                <div class="panel-heading">Her</div>
+                <div class="panel-body">
+                    <h5>Release date : 10 january 2014</h5>
+                    <p>A lonely writer develops an unlikely relationship with his newly purchased operating system that's designed to meet his every need.</p>
+                    <div>
+                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#movieplayer">
+                            Bande annonce
+                        </button>
+                        <a class="appleButton" href="https://geo.itunes.apple.com/us/movie/her-2013/id810314926?mt=6"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+            <h2>Series</h2>
+        </div>
+    </div>
+    <div class="row" ng-repeat="i in [1, 2, 3]">
+        <div class="col-md-7 col-sm-12 col-xs-12">
+            <img class="thumbnail" src="http://ia.media-imdb.com/images/M/MV5BMTkwMjg2NzczNV5BMl5BanBnXkFtZTcwNzg5ODcyMQ@@._V1_SY317_CR4,0,214,317_AL_.jpg"/>
+
+            <div class="panel panel-info">
+                <div class="panel-heading">Murder, She Wrote</div>
+                <div class="panel-body">
+                    <p>Professional writer and amateur sleuth Jessica Fletcher uses her intellect, charm, and persistence to get to the bottom of every crime she encounters. </p>
+                    <div>
+                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#movieplayer">
+                            Bande annonce
+                        </button>
+                        <a class="appleButton" href="https://geo.itunes.apple.com/us/tv-season/murder-she-wrote/id988556468?i=1024047736&mt=4"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="movieplayer" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Title</h4>
+                </div>
+                <div class="modal-body">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/hTzCSDOM0JQ" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
