--- a/public/views/tvshow.html
+++ b/public/views/tvshow.html
@@ -1,6 +1,5 @@
 <div ng-include="'views/navbar.html'"></div>
 
-<div class="background-image"></div>
 <div class="container-fluid main-container">
     <div class="row topPage">
     </div>
@@ -79,7 +78,7 @@
                 </div>
             </div>
         </div>
-        <img class="thumbnail col-md-4 col-sm-4 col-xs-12"
+        <img class="col-md-4 col-sm-4 col-xs-12"
              src="http://www.gstatic.com/tv/thumb/tvbanners/184338/p184338_b_v7_ac.jpg">
     </div>
 </div>
