--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,9 +8,18 @@
 }
 
 body {
-    font-family: "Adobe Caslon Pro", "Hoefler Text", Georgia, Garamond, Times, serif;
     letter-spacing:0.1em;
     line-height: 175%;
+}
+
+@media (max-width: 768px) {
+    body {
+        padding-top: 50px;
+    }
+}
+
+.main-container, .navbar-brand {
+    font-family: "Adobe Caslon Pro", "Hoefler Text", Georgia, Garamond, Times, serif;
 }
 
 .jumbotron p{
