--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -33,9 +33,10 @@
         </div>
     </div>
     <div class="row" ng-repeat="i in [1, 2, 3]">
-        <div class="col-md-7 col-sm-12 col-xs-12">
+        <div class="col-md-2 col-sm-2 col-xs-12">
             <img class="thumbnail" src="http://ia.media-imdb.com/images/M/MV5BMjA1Nzk0OTM2OF5BMl5BanBnXkFtZTgwNjU2NjEwMDE@._V1_UX148_CR0,0,148,200_AL_.jpg"/>
-
+        </div>
+        <div class="col-md-6 col-sm-9 col-xs-12">
             <div class="panel panel-info">
                 <div class="panel-heading">Her</div>
                 <div class="panel-body">
