same for series

--- a/public/views/actor.html
+++ b/public/views/actor.html
@@ -59,9 +59,10 @@
         </div>
     </div>
     <div class="row" ng-repeat="i in [1, 2, 3]">
-        <div class="col-md-7 col-sm-12 col-xs-12">
+        <div class="col-md-2 col-sm-2 col-xs-12">
             <img class="thumbnail" src="http://ia.media-imdb.com/images/M/MV5BMTkwMjg2NzczNV5BMl5BanBnXkFtZTcwNzg5ODcyMQ@@._V1_SY317_CR4,0,214,317_AL_.jpg"/>
-
+        </div>
+        <div class="col-md-6 col-sm-9 col-xs-12">
             <div class="panel panel-info">
                 <div class="panel-heading">Murder, She Wrote</div>
                 <div class="panel-body">
