corrections and align

--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -33,13 +33,12 @@
                         </ul>
                     </li>
                     <li>
-
-                        <a href="#"><img src="http://www.gravatar.com/avatar/fdsdfs?s=20" class="img img-circle">User123123</a>
+                        <a href="#"><img  class="img img-circle navbar-icon" src="http://www.gravatar.com/avatar/fdsdfs?s=20">User123123</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="glyphicon glyphicon-cog visible-xs">Settings</a>
+                        <a class="visible-xs"><span class="glyphicon glyphicon-cog navbar-icon"></span>Settings</a>
                         <a class="glyphicon glyphicon-cog hidden-xs"></a>
                     </li>
                     <li><a href="#">Log out</a></li>
