--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,13 +26,6 @@ body {
     font-size: 16px;
 }
 
-.thumbnail {
-    float:left;
-    margin-right: 20px;
-    width: 150px;
-    height: 200px;
-}
-
 .panel {
     overflow: hidden;
     margin-bottom: 50px;
@@ -58,4 +51,5 @@ body {
 .main-container {
     padding-top: 100px;
     padding-left: 5%;
+    padding-right: 5%;
 }
