watchlists page and functionality

--- a/public/template/navbar.html
+++ b/public/template/navbar.html
@@ -1,6 +1,5 @@
 <div class="container">
 
-    <!-- Code here -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -23,7 +22,7 @@
             </form>
             <div class="collapse navbar-collapse" id="navbar-collapse-umovie">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Watchlists</a></li>
+                    <li><a ui-sref="watchlists">Watchlists</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Content<span class="caret"></span></a>
                         <ul class="dropdown-menu">
