--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,4 @@
-<div ng-include="'views/navbar.html'"></div>
+<div ng-include="'template/navbar.html'"></div>
 
 <div class="container main-container">
 
