switched to ng-src to make the browser not fetch literal image link

--- a/public/views/watchlists.html
+++ b/public/views/watchlists.html
@@ -72,7 +72,7 @@
               <ul class="movieList" ng-repeat="movie in watchlist.movies">
                 <li>
                   <div>
-                    <div class="artwork"><img src="{{movie.artworkUrl100}}"></div>
+                    <div class="artwork"><img ng-src="{{movie.artworkUrl100}}"></div>
                     <div class="movie-information">
                       <h3>{{movie.trackName}}</h3>
                       <span>({{movie.releaseDate | date :"yyyy"}})</span>
