--- a/public/views/movies/movie.html
+++ b/public/views/movies/movie.html
@@ -1,18 +1,18 @@
 ﻿<div ng-include="'views/navbar.html'"></div>
-
-<div class="container-fluid main-container">
+<div class="container-fluid main-container" ng-controller="movieController">
     <div class="row topPage">
     </div>
     <div class="row">
         <div class="col-md-8 col-sm-8 col-xs-12">
             <div class="row">
                 <div class="col-md-6 col-sm-12 col-xs-12">
-                    <h1 class="row">Fifty Shades Of Grey</h1>
+                    <h1 class="row">{{movie.trackName}}</h1>
 
                     <div class="row">
                         <ul class="list-inline pointedList">
-                            <li>Drama, Romance</li>
-                            <li>11 February 2015 (France)</li>
+                            <li>{{movie.primaryGenreName}}</li>
+                            <li>{{movie.releaseDate | date : format : timezone}}</li>
+                            <li>Rated {{movie.contentAdvisoryRating}}</li>
                         </ul>
                     </div>
                 </div>
@@ -25,39 +25,24 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Fifty Shades of Grey - Bande Annonce</h4>
+                                    <h4 class="modal-title">{{movie.trackName}} - Bande Annonce</h4>
                                 </div>
                                 <div class="modal-body">
-                                    <iframe width=100% height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+                                    <iframe width=100% height="315" src="{{movie.previewUrl}}"
                                             frameborder="0" allowfullscreen></iframe>
                                 </div>
                             </div>
-                            <!-- /.modal-content -->
                         </div>
-                        <!-- /.modal-dialog -->
                     </div>
-                    <!-- /.modal -->
-
                 </div>
                 <div class="appleButton col-md-2 col-sm-6 col-xs-offset-0">
-                    <a href="https://geo.itunes.apple.com/fr/movie/cinquante-nuances-de-grey/id962931571?mt=6"></a>
+                    <a href="{{movie.trackViewUrl}}"></a>
                 </div>
             </div>
             <div class="row jumbotron">
-                <p>
-                    When Anastasia Steele, a literature student, goes to interview the wealthy Christian Grey as a favor
-                    to her roommate Kate Kavanagh, she encounters a beautiful, brilliant and intimidating man. The
-                    innocent and naive Ana starts to realize she wants him. Despite his enigmatic reserve and advice,
-                    she finds herself desperate to get close to him. Not able to resist Ana's beauty and independent
-                    spirit, Christian Grey admits he wants her too, but on his own terms. Ana hesitates as she discovers
-                    the singular tastes of Christian Grey - despite the embellishments of success, his multinational
-                    businesses, his vast wealth, and his loving family, Grey is consumed by the need to control
-                    everything.
-                </p>
+                <p>{{movie.longDescription}}</p>
             </div>
         </div>
-        <img class="col-md-4  col-sm-4 col-xs-12"
-             src="http://ia.media-imdb.com/images/M/MV5BMjE1MTM4NDAzOF5BMl5BanBnXkFtZTgwNTMwNjI0MzE@._V1_SX640_SY720_.jpg">
+        <img class="col-md-4  col-sm-4 col-xs-12" src="{{movie.artworkUrl100}}">
     </div>
-
 </div>
