--- a/public/views/movies/preview_modal.html
+++ b/public/views/movies/preview_modal.html
@@ -1,14 +1,9 @@
-<div id="preview" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">{{title}}- Bande Annonce</h4>
-            </div>
-            <div class="modal-body">
-                <iframe width=100% height="315" src="{{previewUrl}}"
-                        frameborder="0" allowfullscreen></iframe>
-            </div>
+<div class="container-fluid main-container">
+    <div class="row topPage"></div>
+    <div ng-include="'views/navbar.html'"></div>
+    <div class="row">
+        <div class="col-md-8 col-sm-8 col-xs-12">
+            <div ng-controller="movieController">{{movies.title}}</div>
         </div>
     </div>
 </div>
