base files tvshows

--- a/public/views/tvshow.html
+++ b/public/views/tvshow.html
@@ -46,16 +46,7 @@
                 <div class="col-md-12">
                     <div class="jumbotron">
                         <p>
-                            The show follows the exploits of four boys, Stan Marsh, Kyle Broflovski, Eric Cartman
-                            and Kenny McCormick. The boys live in the fictional small town of South Park, located
-                            within the real life South Park basin in the Rocky Mountains of central Colorado. The
-                            town is also home to an assortment of frequent characters such as students, families,
-                            elementary school staff, and other various residents, who tend to regard South Park as a
-                            bland and quiet place to live. Prominent settings on the show include the local
-                            elementary school,
-                            bus stop, various neighborhoods and the surrounding snowy landscape, actual Colorado
-                            landmarks, and the shops and businesses along the town's main street, all of which are
-                            based on the appearance of similar locations in the town of Fairplay, Colorado.
+                            {{getTVshowsSeason1.collectionName}}
                         </p>
                     </div>
                 </div>
