--- a/public/template/navbar.html
+++ b/public/template/navbar.html
@@ -11,11 +11,12 @@
                 </button>
                 <a class="navbar-brand" ui-sref="home">CornPub</a>
             </div>
-            <form class="navbar-form navbar-left" role="search">
+            <form class="navbar-form navbar-left" role="search" method="get">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search..."/>
+                    <input name="q" type="text" class="form-control" placeholder="Search..."/>
                     <div class="input-group-btn">
-                        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>
+                        <button type="submit" class="btn btn-default" ui-sref="search">
+                            <span class="glyphicon glyphicon-search"></span>
                         </button>
                     </div>
                 </div>
