--- a/public/template/navbar.html
+++ b/public/template/navbar.html
@@ -12,14 +12,16 @@
                 <a class="navbar-brand" ui-sref="home">CornPub</a>
             </div>
             <form class="navbar-form navbar-left" role="search" method="get">
-                <div class="input-group">
-                    <input name="q" type="text" class="form-control" placeholder="Search..."/>
-                    <div class="input-group-btn">
-                        <button type="submit" class="btn btn-default" ui-sref="search">
-                            <span class="glyphicon glyphicon-search"></span>
-                        </button>
+                <!--<div ng-controller="SearchCtrl">-->
+                    <div class="input-group">
+                        <input name="q" type="text" ng-model="asdfdas" class="form-control" placeholder="Search..."/>
+                        <div class="input-group-btn">
+                            <button type="submit" class="btn btn-default" ng-click="updateSearch()" ui-sref="search">
+                                <span class="glyphicon glyphicon-search"></span>
+                            </button>
+                        </div>
                     </div>
-                </div>
+                <!--</div>-->
             </form>
             <div class="collapse navbar-collapse" id="navbar-collapse-umovie">
                 <ul class="nav navbar-nav">
