--- a/public/views/search.html
+++ b/public/views/search.html
@@ -1,9 +1,10 @@
+<div ng-controller="SearchCtrl">
 <div ng-include="'template/navbar.html'"></div>
 
 <div class="container-fluid main-container">
     <div class="row topPage"></div>
     <div class="row">
-        <div class="col-md-8 col-sm-8 col-xs-12" ng-controller="SearchCtrl">
+        <div class="col-md-8 col-sm-8 col-xs-12">
             <h1>Search</h1>
             <table class="table">
                 <thead>
@@ -12,7 +13,7 @@
                     <th>Title</th>
                     <th>Watchlist</th>
                 </tr>
-                <tr ng-repeat="result in getResults()">
+                <tr ng-repeat="result in searchResults">
                     <td>
                         <div class="artwork">
                             <img ng-src="{{result.artworkUrl100}}">
@@ -25,6 +26,9 @@
                 </tr>
                 </tbody>
             </table>
+            {{searchResults}}
         </div>
     </div>
+</div>
+
 </div>
