--- a/public/views/search.html
+++ b/public/views/search.html
@@ -1,4 +1,3 @@
-<div ng-controller="SearchCtrl">
 <div ng-include="'template/navbar.html'"></div>
 
 <div class="container-fluid main-container">
@@ -6,6 +5,9 @@
     <div class="row">
         <div class="col-md-8 col-sm-8 col-xs-12">
             <h1>Search</h1>
+
+            <ng-pluralize count="searchResults[0].resultCount" when="{'0': 'No results', 'one': '1 result', 'other': '{} results'}"></ng-pluralize>
+
             <table class="table">
                 <thead>
                 <tr>
@@ -13,7 +15,8 @@
                     <th>Title</th>
                     <th>Watchlist</th>
                 </tr>
-                <tr ng-repeat="result in searchResults">
+
+                <tr ng-repeat="result in searchResults[0].results">
                     <td>
                         <div class="artwork">
                             <img ng-src="{{result.artworkUrl100}}">
@@ -26,7 +29,6 @@
                 </tr>
                 </tbody>
             </table>
-            {{searchResults}}
         </div>
     </div>
 </div>
