--- a/public/views/search.html
+++ b/public/views/search.html
@@ -23,7 +23,7 @@
                         </div>
                     </td>
                     <td>
-                        <a ui-sref="#/movie/{{result.trackId}}">{{result.trackName}}</a>
+                        <a ui-sref="movie({movieId : result.trackId})">{{result.trackName}}</a>
                     </td>
                     <td>{{result.trackId}}</td>
                 </tr>
