--- a/public/views/home.html
+++ b/public/views/home.html
@@ -8,6 +8,15 @@
             <h4 class="gray">Start browsing CornPub.</h4>
             <a class="btn btn-primary btn-lg" ui-sref="home">Sign Up Now!</a>
             <a class="btn btn-default btn-outline btn-lg" ui-sref="home">Browse</a>
+
+            <h4 class="gray">Here some stuff</h4>
+
+            <button type="button" class="btn btn-info btn-lg" ui-sref="tvshow({ seasonId: 278750007 })">
+                Watch Rome! it's great
+            </button>
+            <button type="button" class="btn btn-info btn-lg" ui-sref="tvshow({ seasonId: 190066649 })">
+                Ellen Pompeo fan?
+            </button>
         </div>
     </div>
 
